--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -2,19 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Embedded Tweet</title>
+  <title>Tweets Page</title>
 </head>
 <body>
-  <h1>Check out this tweet!</h1>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-  <!-- Embedded Tweet -->
-  <blockquote class="twitter-tweet">
-    <p lang="en" dir="ltr">Just setting up my twttr</p>&mdash; jack (@jack) 
-    <a href="https://twitter.com/jack/status/20?ref_src=twsrc%5Etfw">March 21, 2006</a>
-  </blockquote> 
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <main>
+    <article>
+      <h1>Check out this tweet!</h1>
+      <!-- Embedded Tweet -->
+      <blockquote class="twitter-tweet">
+        <p lang="en" dir="ltr">Just setting up my twttr</p>&mdash; jack (@jack) 
+        <a href="https://twitter.com/jack/status/20?ref_src=twsrc%5Etfw">March 21, 2006</a>
+      </blockquote> 
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-  <!-- Link back to homepage -->
-  <p><a href="index.html">Back to Homepage</a></p>
+      <!-- Link back to homepage (optional since it's in nav) -->
+      <p><a href="index.html">Back to Homepage</a></p>
+    </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Harry - <a href="https://your-profile-link.com" target="_blank">here</a></p>
+  </footer>
 </body>
 </html>
