--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -16,5 +16,26 @@
     <h3>heading 3</h3>
 
     <a href=""><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt=""></a>
+<header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
+
+  <main>
+    <article>
+      <h1>Check out this tweet!</h1>
+    </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Harry - <a href="https://your-profile-link.com" target="_blank">here</a></p>
+  </footer>
+
 </body>
 </html>
