--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Home Page</title>
 </head>
 <body>
-    <p>paragraph 1</p>
-    <p>paragraph 2</p>
-    <p>paragraph 3</p>
-    <p>paragraph 4</p>
-
-    <h1>heading 1</h1>
-    <h2>heading 2</h2>
-    <h3>heading 3</h3>
-
-    <a href=""><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt=""></a>
-<header>
+  <header>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="tweets.html">Tweets</a></li>
@@ -25,7 +14,41 @@
 
   <main>
     <article>
-      <h1>Check out this tweet!</h1>
+      <h1>Welcome to the Homepage!</h1>
+      <p>This website showcases embedded tweets and information about learners.</p>
+
+      <!-- Table of learners -->
+      <table>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Country</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>John</td>
+            <td>25</td>
+            <td>USA</td>
+          </tr>
+          <tr>
+            <td>Emily</td>
+            <td>28</td>
+            <td>Canada</td>
+          </tr>
+          <tr>
+            <td>Michael</td>
+            <td>32</td>
+            <td>Australia</td>
+          </tr>
+          <tr>
+            <td>Sophia</td>
+            <td>21</td>
+            <td>UK</td>
+          </tr>
+        </tbody>
+      </table>
     </article>
 
     <aside>
@@ -36,6 +59,5 @@
   <footer>
     <p>Made by Harry - <a href="https://your-profile-link.com" target="_blank">here</a></p>
   </footer>
-
 </body>
 </html>
