--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -59,5 +59,74 @@
   <footer>
     <p>Made by Harry - <a href="https://your-profile-link.com" target="_blank">here</a></p>
   </footer>
+
+  <!--portfolio-->
+   <!-- Header -->
+  <header>
+    <h1>Harry Doe</h1>
+    <p>A passionate developer committed to building meaningful digital solutions.</p>
+  </header>
+
+  <!-- Navigation -->
+  <nav>
+    <ul>
+      <li><a href="#introduction">Introduction</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- Introduction Section -->
+  <section id="introduction">
+    <h2>Introduction</h2>
+    <p>Hello! I’m Harry, a full-stack developer with a keen interest in creating responsive, user-focused web applications. I enjoy solving real-world problems through clean code and modern technologies.</p>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects">
+    <h2>Projects</h2>
+
+    <article class="project">
+      <h3>DreamShops E-Commerce API</h3>
+      <p>A back-end API built with Spring Boot for managing products, categories, users, and orders.</p>
+      <a href="https://github.com/your-username/dreamshops-api" target="_blank">View Project</a>
+    </article>
+
+    <article class="project">
+      <h3>Student Management System</h3>
+      <p>A full-stack application for registering and managing student records and teachers.</p>
+      <a href="https://github.com/your-username/student-management-system" target="_blank">View Project</a>
+    </article>
+
+    <article class="project">
+      <h3>Event Management System (Desktop App)</h3>
+      <p>Windows Forms application written in C# for managing events, guests, and schedules.</p>
+      <a href="https://github.com/your-username/event-management-system" target="_blank">View Project</a>
+    </article>
+
+  </section>
+
+  <!-- About Me Section -->
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I have a strong foundation in Java, Spring Boot, HTML, CSS, and basic React. I'm currently learning more about front-end technologies and DevOps practices. My hobbies include reading, building side projects, and contributing to open-source software.</p>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Feel free to reach out to me:</p>
+    <ul>
+      <li>Email: <a href="mailto:harry.doe@example.com">harry.doe@example.com</a></li>
+      <li>LinkedIn: <a href="https://www.linkedin.com/in/harry-doe" target="_blank">linkedin.com/in/harry-doe</a></li>
+      <li>GitHub: <a href="https://github.com/harrydoe" target="_blank">github.com/harrydoe</a></li>
+    </ul>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2024 Harry Doe</p>
+  </footer>
 </body>
 </html>
